Fixed footer on small screens.

--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,10 +1,9 @@
 .footer-wrapper {
-    width: 40%;
+    width: 100%;
     height: 25px;
     position:fixed;
     bottom:0;
-    left: 30%;
-    right: 30%;
+    left: 0;
     text-align: center;
 }
 
